# pearl-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: experimental.md  getting-started.md  index.md  tokens.md
docs/components/: ai-suggestion-card.md  approve-bar.md  audit-log-row.md  avatar-stack.md  avatar.md  badge.md  bipolar-slider.md  brand-tile.md  breadcrumb.md  button.md  card.md  chat-composer.md  chat-message.md  checkbox.md  checklist-item.md  chip.md  code-block.md  color-dot.md  connection-status.md  data-table.md  density-bar.md  detachable-tabs.md  dialog.md  editorial-hero.md  fact-grid.md  feature-bullet.md  filter-row.md  form-row.md  group-box.md  group.md  icon-badge.md  icon-strip.md  info-card.md  input.md  list-view.md  menu.md  message-box.md  meta-row.md  nav-item.md  numbered-nav-item.md  (+56 more)
docs/hooks/: ensure_wasm.py
examples/: App.qml  CaseLibrary.qml  Splash.qml  gallery.py  onboarding_preview.py  planning_viewports_preview.py  planning_workspace_preview.py  splash_library.py
examples/showcase/: Showcase.qml  showcase.py
examples/showcase/pages/: AuditAndEditorial.qml  Bars.qml  Buttons.qml  Cards.qml  ChatAndAssistant.qml  ClinicalPrimitives.qml  Containers.qml  FormRows.qml  MenusAndDetachable.qml  OnboardingAndSteps.qml  Overlays.qml  People.qml  Progress.qml  SelectionControls.qml  SidebarsAndLists.qml  SlidersAndSteppers.qml  StatusIndicators.qml  TablesAndGrids.qml  TextInputs.qml  TokensAndTheme.qml  Typography.qml
scripts/: build-wasm-docker.sh  build-wasm.sh  fetch-wasm.sh
src/pearl_kit/: __init__.py  _notifications.py  _register.py
src/pearl_kit/_viewports/: __init__.py  _image_viewport_item.py  _vtk_viewport_item.py
src/pearl_kit/qml/PearlKit/: AISuggestionCard.qml  AngleArc.qml  ApproveBar.qml  ArchPath.qml  Arrow.qml  AuditLogRow.qml  Avatar.qml  AvatarStack.qml  Badge.qml  BipolarSlider.qml  BrandTile.qml  Breadcrumb.qml  Button.qml  Card.qml  ChatComposer.qml  ChatMessage.qml  CheckBox.qml  ChecklistItem.qml  Chip.qml  CodeBlock.qml  CollapsibleNavGroup.qml  ColorDot.qml  ConnectionStatus.qml  Crosshair.qml  DataTable.qml  DensityBar.qml  DetachableTab.qml  DetachableTabView.qml  Dialog.qml  DistanceLine.qml  EditorialHero.qml  FactGrid.qml  FeatureBullet.qml  FilterRow.qml  FloatingWindow.qml  FormRow.qml  Group.qml  GroupBox.qml  IconBadge.qml  IconStrip.qml  (+83 more)
src/pearl_kit/qml/PearlKit/internal/: PearlAlertIcon.qml  PearlBackground.qml  PearlBaseText.qml  PearlCheckIcon.qml  PearlChevron.qml  PearlCopyIcon.qml  PearlDockIcon.qml  PearlFocusRing.qml  PearlMaximizeIcon.qml  PearlMeasureIcon.qml  PearlNavigateIcon.qml  PearlPlanIcon.qml  PearlPopup.qml  PearlToastIcon.qml  PearlToothIcon.qml  PearlXIcon.qml  qmldir
tests/: conftest.py  test_ai_suggestion_card.py  test_angle_arc.py  test_approve_bar.py  test_arch_path.py  test_arrow.py  test_audit_log_row.py  test_avatar.py  test_avatar_stack.py  test_badge.py  test_bipolar_slider.py  test_breadcrumb.py  test_button.py  test_card.py  test_chat_composer.py  test_chat_message.py  test_checkbox.py  test_checklist_item.py  test_chip.py  test_code_block.py  test_collapsible_nav_group.py  test_color_dot.py  test_connection_status.py  test_data_table.py  test_density_bar.py  test_detachable_tab.py  test_detachable_tab_view.py  test_dialog.py  test_distance_line.py  test_editorial_hero.py  test_fact_grid.py  test_feature_bullet.py  test_floating_window.py  test_form_row.py  test_group.py  test_groupbox.py  test_icon_badge.py  test_icon_strip.py  test_import.py  test_input.py  (+62 more)
wasm/: CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  generate_qrc.py  main.cpp  main.qml  shell.html
wasm/demos/: ai-suggestion-card.qml  approve-bar.qml  audit-log-row.qml  avatar-stack.qml  avatar.qml  badge.qml  bipolar-slider.qml  brand-tile.qml  breadcrumb.qml  button.qml  card.qml  chat-composer.qml  chat-message.qml  checkbox.qml  checklist-item.qml  chip.qml  code-block.qml  color-dot.qml  connection-status.qml  data-table.qml  density-bar.qml  detachable-tabs.qml  dialog.qml  editorial-hero.qml  fact-grid.qml  feature-bullet.qml  filter-row.qml  form-row.qml  group-box.qml  group.qml  icon-badge.qml  icon-strip.qml  index.qml  info-card.qml  input.qml  list-view.qml  menu.qml  message-box.qml  meta-row.qml  nav-item.qml  (+56 more)
wasm/fonts/: README.md
